# htmlgen

./: README.md  demo.py  htmlgen.py  pyproject.toml
src/htmlgen/: __init__.py
